--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,16 +8,16 @@ server {
 }
 
 # ===============================
-# 2) HTTPS 區塊
+# 2) HTTPS 區塊 (實際服務)
 # ===============================
 server {
     listen 443 ssl;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # 內建 Docker DNS (127.0.0.11)
+    # 內建 Docker DNS
     resolver 127.0.0.11 valid=30s;
 
-    # Let's Encrypt 憑證路徑
+    # Let's Encrypt 憑證
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
@@ -26,7 +26,7 @@ server {
     ssl_prefer_server_ciphers on;
 
     # ===============================
-    # (A) React (對應 suzoo_react:3000)
+    # (A) React → suzoo_react:3000
     # ===============================
     location / {
         proxy_pass http://suzoo_react:3000;
@@ -41,8 +41,8 @@ server {
     }
 
     # ===============================
-    # (B) Express (對應 suzoo_express:3000)
-    #   => /api/... 對應 express:3000/...
+    # (B) Express → suzoo_express:3000
+    #     /api/... → Express
     # ===============================
     location /api/ {
         proxy_pass http://suzoo_express:3000/;
@@ -57,8 +57,8 @@ server {
     }
 
     # ===============================
-    # (C) FastAPI (對應 suzoo_fastapi:8000)
-    #   => /api/py/... 對應 fastapi:8000/...
+    # (C) FastAPI → suzoo_fastapi:8000
+    #     /api/py/... → FastAPI
     # ===============================
     location /api/py/ {
         proxy_pass http://suzoo_fastapi:8000/;
