--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -40,10 +40,10 @@ server {
 
     # ===============================
     # (B) Express → suzoo_express:3000
-    #     /api/... → Express
+    #     /api/... → Express (去除 /api)
     # ===============================
     location /api/ {
-        proxy_pass http://suzoo_express:3000/;
+        proxy_pass http://suzoo_express:3000/; # <--- 末尾有 / 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
