--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@
 POSTGRES_USER=suzoo
 POSTGRES_PASSWORD=KaiShieldDbPass2023!
 POSTGRES_DB=suzoo
-POSTGRES_HOST=postgres
+# ★ 與 docker-compose 中 "suzoo_postgres" 保持一致
+POSTGRES_HOST=suzoo_postgres 
 POSTGRES_PORT=5432
 
 # =====================================
@@ -27,14 +28,16 @@ RAPIDAPI_KEY=71dbbf39f7msh794002260b4e71bp1025e2jsn652998e0f81a
 # =====================================
 # Ganache (Ethereum 私有鏈)
 # =====================================
-GANACHE_HOST=ganache
+# Compose 服務名稱: suzoo_ganache
+GANACHE_HOST=suzoo_ganache
 GANACHE_PORT=8545
 BLOCKCHAIN_RPC_URL=http://suzoo_ganache:8545
 
 # =====================================
 # IPFS 服務 URL
 # =====================================
-IPFS_API_URL=http://ipfs:5001
+# Compose 服務名稱: suzoo_ipfs
+IPFS_API_URL=http://suzoo_ipfs:5001
 
 # =====================================
 # DMCA 違規指紋 (多個用逗號分隔)
@@ -49,11 +52,13 @@ NODE_ENV=production
 # =====================================
 # FastAPI 服務 URL
 # =====================================
+# Compose 服務名稱: suzoo_fastapi
 FASTAPI_URL=http://suzoo_fastapi:8000
 
 # =====================================
 # Express 服務認證 (供爬蟲或其他服務登入使用)
 # =====================================
+# Compose 服務名稱: suzoo_express
 EXPRESS_LOGIN_USER=your_express_username
 EXPRESS_LOGIN_PASS=your_express_password
 EXPRESS_BASE_URL=http://suzoo_express:3000
@@ -71,4 +76,4 @@ CONTRACT_ADDRESS=0x590CC0a45103883cEa6E27c9a4Cc356De6384aeb
 # =====================================
 # (可選) 完整資料庫連線字串
 # =====================================
-DATABASE_URL=postgresql://suzoo:KaiShieldDbPass2023!@postgres:5432/suzoo
+DATABASE_URL=postgresql://suzoo:KaiShieldDbPass2023!@suzoo_postgres:5432/suzoo
