--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,6 +4,8 @@
 server {
     listen 80;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+
+    # 將所有 HTTP 強制導向 HTTPS
     return 301 https://$host$request_uri;
 }
 
@@ -17,7 +19,7 @@ server {
     # 內建 Docker DNS
     resolver 127.0.0.11 valid=30s;
 
-    # Let's Encrypt 憑證
+    # Let's Encrypt 憑證 (請確認檔案路徑無誤)
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
@@ -25,8 +27,16 @@ server {
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
+    # ★ 若有需要上傳較大檔案，可調整 client_max_body_size
+    client_max_body_size 200M;
+
+    # 避免 proxy 等候過久導致 504，可選
+    proxy_read_timeout 300;
+    proxy_send_timeout 300;
+
     # ===============================
     # (A) React → suzoo_react:3000
+    #     所有根路徑 "/" => React
     # ===============================
     location / {
         proxy_pass http://suzoo_react:3000;
@@ -40,10 +50,12 @@ server {
 
     # ===============================
     # (B) Express → suzoo_express:3000
-    #     /api/... → Express (去除 /api)
+    #     /api/... => Express (去除 /api)
     # ===============================
     location /api/ {
-        proxy_pass http://suzoo_express:3000/; # <--- 末尾有 / 
+        # 結尾加 "/" 代表 "/api/foo" => "http://suzoo_express:3000/foo"
+        proxy_pass http://suzoo_express:3000/;
+
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -54,10 +66,11 @@ server {
 
     # ===============================
     # (C) FastAPI → suzoo_fastapi:8000
-    #     /api/py/... → FastAPI
+    #     /api/py/... => FastAPI
     # ===============================
     location /api/py/ {
         proxy_pass http://suzoo_fastapi:8000/;
+
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
