--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -17,7 +17,7 @@ server {
     # 內建 Docker DNS
     resolver 127.0.0.11 valid=30s;
 
-    # Let's Encrypt 憑證
+    # Let's Encrypt 憑證 (在 /etc/letsencrypt/live/<domain>/ 下)
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
@@ -27,16 +27,16 @@ server {
 
     # ===============================
     # (A) React → suzoo_react:3000
-    #   加入 SPA fallback (try_files)
     # ===============================
+    # 直接反向代理到 React Container (serve -s build)
+    # 不使用 try_files, 避免重導循環
     location / {
-        # 讓 React Router 所有子路徑都回到 /index.html
-        try_files $uri /index.html;
-
         proxy_pass http://suzoo_react:3000/;
+
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -48,9 +48,11 @@ server {
     # ===============================
     location /api/ {
         proxy_pass http://suzoo_express:3000/;
+
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -62,9 +64,11 @@ server {
     # ===============================
     location /api/py/ {
         proxy_pass http://suzoo_fastapi:8000/;
+
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
