--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -14,10 +14,10 @@ server {
     listen 443 ssl;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # 內建 Docker DNS
+    # Docker 內建 DNS
     resolver 127.0.0.11 valid=30s;
 
-    # Let's Encrypt 憑證 (在 /etc/letsencrypt/live/<domain>/ 下)
+    # Let's Encrypt 憑證
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
@@ -26,10 +26,8 @@ server {
     ssl_prefer_server_ciphers on;
 
     # ===============================
-    # (A) React → suzoo_react:3000
+    # (A) React => suzoo_react:3000
     # ===============================
-    # 直接反向代理到 React Container (serve -s build)
-    # 不使用 try_files, 避免重導循環
     location / {
         proxy_pass http://suzoo_react:3000/;
 
@@ -43,8 +41,8 @@ server {
     }
 
     # ===============================
-    # (B) Express → suzoo_express:3000
-    #     /api/... → Express
+    # (B) Express => suzoo_express:3000
+    #     /api/... => Express
     # ===============================
     location /api/ {
         proxy_pass http://suzoo_express:3000/;
@@ -59,8 +57,8 @@ server {
     }
 
     # ===============================
-    # (C) FastAPI → suzoo_fastapi:8000
-    #     /api/py/... → FastAPI
+    # (C) FastAPI => suzoo_fastapi:8000
+    #     /api/py/... => FastAPI
     # ===============================
     location /api/py/ {
         proxy_pass http://suzoo_fastapi:8000/;
