--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.8"
+
 services:
   # -------------------
   # 1) PostgreSQL
@@ -120,7 +122,7 @@ services:
       - .env
     expose:
       - "3000"
-    # === 新增映射 Port，方便測試 React by "http://宿主IP:3000"
+    # 額外開放 3000 port 以便在需要時直接訪問 React
     ports:
       - "3000:3000"
     networks:
