--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -14,23 +14,17 @@ server {
     listen 443 ssl;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # Docker 內建 DNS
     resolver 127.0.0.11 valid=30s;
 
-    # Let's Encrypt 憑證
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
-
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # ===============================
-    # (A) React => suzoo_react:3000
-    # ===============================
+    # A) React => suzoo_react:3000
     location / {
         proxy_pass http://suzoo_react:3000/;
-
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -40,13 +34,9 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # ===============================
-    # (B) Express => suzoo_express:3000
-    #     /api/... => Express
-    # ===============================
+    # B) Express => suzoo_express:3000
     location /api/ {
         proxy_pass http://suzoo_express:3000/;
-
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -56,13 +46,9 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # ===============================
-    # (C) FastAPI => suzoo_fastapi:8000
-    #     /api/py/... => FastAPI
-    # ===============================
+    # C) FastAPI => suzoo_fastapi:8000
     location /api/py/ {
         proxy_pass http://suzoo_fastapi:8000/;
-
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
