--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -14,27 +14,20 @@ server {
     listen 443 ssl;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
+    # Docker DNS
     resolver 127.0.0.11 valid=30s;
 
+    # SSL 憑證
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # A) React => suzoo_react:3000
-    location / {
-        proxy_pass http://suzoo_react:3000/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    # B) Express => suzoo_express:3000
+    # ===============================
+    # (A) Express => suzoo_express:3000
+    #     /api/... => Express
+    # ===============================
     location /api/ {
         proxy_pass http://suzoo_express:3000/;
         proxy_http_version 1.1;
@@ -46,9 +39,30 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # C) FastAPI => suzoo_fastapi:8000
+    # ===============================
+    # (B) FastAPI => suzoo_fastapi:8000
+    #     /api/py/... => FastAPI
+    # ===============================
     location /api/py/ {
         proxy_pass http://suzoo_fastapi:8000/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    # ===============================
+    # (C) 其餘所有路徑 => React (suzoo_react:3000) + SPA Fallback
+    # ===============================
+    location / {
+        # 1) 若有對應檔案就用原檔案; 若無 => fallback /index.html
+        # => 可解決 "/pricing" "/contact-us" ... 直接輸入 URL
+        try_files $uri /index.html;
+
+        proxy_pass http://suzoo_react:3000/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
