--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -24,49 +24,42 @@ server {
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # ===============================
-    # (A) Express => suzoo_express:3000
-    #     /api/... => Express
-    # ===============================
+    # -------------------------
+    # (A) Express: /api/ => suzoo_express:3000
+    # -------------------------
     location /api/ {
         proxy_pass http://suzoo_express:3000/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # ===============================
-    # (B) FastAPI => suzoo_fastapi:8000
-    #     /api/py/... => FastAPI
-    # ===============================
+    # -------------------------
+    # (B) FastAPI: /api/py/ => suzoo_fastapi:8000
+    # -------------------------
     location /api/py/ {
         proxy_pass http://suzoo_fastapi:8000/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # ===============================
-    # (C) 其餘所有路徑 => React (suzoo_react:3000) + SPA Fallback
-    # ===============================
+    # -------------------------
+    # (C) React (SPA): 其餘所有路徑 => suzoo_react:3000
+    # + Fallback: try_files $uri /index.html
+    # -------------------------
     location / {
-        # 1) 若有對應檔案就用原檔案; 若無 => fallback /index.html
-        # => 可解決 "/pricing" "/contact-us" ... 直接輸入 URL
-        try_files $uri /index.html;
-
+        try_files $uri /index.html;  # SPA Fallback
         proxy_pass http://suzoo_react:3000/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
