--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -14,60 +14,52 @@ server {
     listen 443 ssl;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # Docker DNS (for container name resolution)
+    # Docker DNS
     resolver 127.0.0.11 valid=30s;
 
-    # Let's Encrypt 憑證路徑
+    # SSL 憑證
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
-
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
     # -------------------------
-    # (A) Express: /api/ => http://suzoo_express:3000/
+    # (A) Express: /api/ => suzoo_express:3000
     # -------------------------
     location /api/ {
-        # 注意最後要有 '/' → 轉發至 /api/... => suzoo_express
         proxy_pass http://suzoo_express:3000/;
-
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     # -------------------------
-    # (B) FastAPI: /api/py/ => http://suzoo_fastapi:8000/
+    # (B) FastAPI: /api/py/ => suzoo_fastapi:8000
     # -------------------------
     location /api/py/ {
         proxy_pass http://suzoo_fastapi:8000/;
-
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     # -------------------------
-    # (C) React SPA: 其餘路徑 => http://suzoo_react:3000/
-    #     Fallback: try_files $uri /index.html
+    # (C) React (SPA): 其餘路徑 => suzoo_react:3000
+    # try_files 確保刷新 /xxx 不會 404
     # -------------------------
     location / {
         try_files $uri /index.html;
         proxy_pass http://suzoo_react:3000/;
-
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
