--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -24,11 +24,11 @@ server {
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # -------------------------
-    # (A) Express: /api/ => suzoo_express:3000
-    # -------------------------
-    location /api/ {
-        proxy_pass http://suzoo_express:3000/;
+    # ------------------------------
+    # (A) 後端 Express: /api/ => suzoo_express:3000
+    # ------------------------------
+    location ~ ^/api/ {
+        proxy_pass http://suzoo_express:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -37,11 +37,11 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # -------------------------
-    # (B) FastAPI: /api/py/ => suzoo_fastapi:8000
-    # -------------------------
-    location /api/py/ {
-        proxy_pass http://suzoo_fastapi:8000/;
+    # ------------------------------
+    # (B) 後端 FastAPI: /api/py/ => suzoo_fastapi:8000
+    # ------------------------------
+    location ~ ^/api/py/ {
+        proxy_pass http://suzoo_fastapi:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -50,13 +50,14 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # -------------------------
-    # (C) React (SPA): 其餘路徑 => suzoo_react:3000
-    # try_files 確保刷新 /xxx 不會 404
-    # -------------------------
+    # ------------------------------
+    # (C) 前端 React (SPA): 其餘所有路徑 => suzoo_react:3000
+    # ------------------------------
     location / {
-        try_files $uri /index.html;
-        proxy_pass http://suzoo_react:3000/;
+        # 若找不到檔案，就走 /index.html (React SPA fallback)
+        try_files $uri /index.html =404;
+
+        proxy_pass http://suzoo_react:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
