--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -25,7 +25,7 @@ server {
     ssl_prefer_server_ciphers on;
 
     # ------------------------------
-    # (A) 後端 Express: /api/ => suzoo_express:3000
+    # (A) Express => /api/
     # ------------------------------
     location ~ ^/api/ {
         proxy_pass http://suzoo_express:3000;
@@ -38,7 +38,7 @@ server {
     }
 
     # ------------------------------
-    # (B) 後端 FastAPI: /api/py/ => suzoo_fastapi:8000
+    # (B) FastAPI => /api/py/
     # ------------------------------
     location ~ ^/api/py/ {
         proxy_pass http://suzoo_fastapi:8000;
@@ -51,10 +51,10 @@ server {
     }
 
     # ------------------------------
-    # (C) 前端 React (SPA): 其餘所有路徑 => suzoo_react:3000
+    # (C) React => 其餘路徑 => suzoo_react:3000
+    #    Fallback: try_files $uri /index.html =404
     # ------------------------------
     location / {
-        # 若找不到檔案，就走 /index.html (React SPA fallback)
         try_files $uri /index.html =404;
 
         proxy_pass http://suzoo_react:3000;
