--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -144,9 +144,10 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    # 移除掛載 default.conf 的行，不再 read-only
+    # 只保留 /etc/letsencrypt SSL 憑證
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - /etc/letsencrypt:/etc/letsencrypt:ro  # Let's Encrypt 憑證
+      - /etc/letsencrypt:/etc/letsencrypt:ro
     restart: unless-stopped
     networks:
       - suzoo_net
