--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -17,52 +17,52 @@ server {
     # Docker DNS
     resolver 127.0.0.11 valid=30s;
 
-    # SSL 憑證
+    # SSL 憑證 (已在 /etc/letsencrypt 挂載)
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_protocols       TLSv1.2 TLSv1.3;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # ------------------------------
-    # (A) Express => /api/
-    # ------------------------------
-    location ~ ^/api/ {
-        proxy_pass http://suzoo_express:3000;
+    # -------------------------
+    # (A) Express: /api/ => suzoo_express:3000
+    # -------------------------
+    location /api/ {
+        proxy_pass http://suzoo_express:3000/;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header  Upgrade           $http_upgrade;
+        proxy_set_header  Connection        "upgrade";
+        proxy_set_header  Host              $host;
+        proxy_set_header  X-Real-IP         $remote_addr;
+        proxy_set_header  X-Forwarded-For   $proxy_add_x_forwarded_for;
     }
 
-    # ------------------------------
-    # (B) FastAPI => /api/py/
-    # ------------------------------
-    location ~ ^/api/py/ {
-        proxy_pass http://suzoo_fastapi:8000;
+    # -------------------------
+    # (B) FastAPI: /api/py/ => suzoo_fastapi:8000
+    # -------------------------
+    location /api/py/ {
+        proxy_pass http://suzoo_fastapi:8000/;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header  Upgrade           $http_upgrade;
+        proxy_set_header  Connection        "upgrade";
+        proxy_set_header  Host              $host;
+        proxy_set_header  X-Real-IP         $remote_addr;
+        proxy_set_header  X-Forwarded-For   $proxy_add_x_forwarded_for;
     }
 
-    # ------------------------------
-    # (C) React => 其餘路徑 => suzoo_react:3000
-    #    Fallback: try_files $uri /index.html =404
-    # ------------------------------
+    # -------------------------
+    # (C) React (SPA)
+    #     其餘路徑 => suzoo_react:3000
+    #     + try_files $uri /index.html 做 fallback
+    # -------------------------
     location / {
-        try_files $uri /index.html =404;
-
-        proxy_pass http://suzoo_react:3000;
+        try_files $uri /index.html;
+        proxy_pass http://suzoo_react:3000/;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header  Upgrade           $http_upgrade;
+        proxy_set_header  Connection        "upgrade";
+        proxy_set_header  Host              $host;
+        proxy_set_header  X-Real-IP         $remote_addr;
+        proxy_set_header  X-Forwarded-For   $proxy_add_x_forwarded_for;
     }
 }
