--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,13 +1,10 @@
 FROM nginx:1.27.4-alpine
 
-# 移除任何預設配置檔
+# 移除任何預設配置檔案
 RUN rm -f /etc/nginx/conf.d/*
 
-# 把你要用的 default.conf 複製到容器裡
+# 將 default.conf 複製進容器
 COPY default.conf /etc/nginx/conf.d/default.conf
-
-# 這裡若你需要其它設定，也可自行新增
-# ...
 
 EXPOSE 80
 EXPOSE 443
