--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -14,48 +14,56 @@ server {
     listen 443 ssl;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # Docker DNS
+    # Docker 內建 DNS
     resolver 127.0.0.11 valid=30s;
 
-    # SSL 憑證 (已透過 volumes 掛載至 /etc/letsencrypt)
+    # SSL 憑證
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
     ssl_protocols       TLSv1.2 TLSv1.3;
     ssl_ciphers         HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
+    # -------------------------
     # (A) Express: /api/... => suzoo_express:3000
+    # -------------------------
     location /api/ {
-        proxy_pass http://suzoo_express:3000/;
+        proxy_pass         http://suzoo_express:3000/;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   Upgrade $http_upgrade;
+        proxy_set_header   Connection "upgrade";
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+    # -------------------------
     # (B) FastAPI: /api/py/... => suzoo_fastapi:8000
+    # -------------------------
     location /api/py/ {
-        proxy_pass http://suzoo_fastapi:8000/;
+        proxy_pass         http://suzoo_fastapi:8000/;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   Upgrade $http_upgrade;
+        proxy_set_header   Connection "upgrade";
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # (C) React SPA: 其餘路徑 => suzoo_react:3000
-    # 加入 try_files $uri /index.html 做 fallback
+    # -------------------------
+    # (C) React SPA: 其餘所有路徑 => suzoo_react:3000
+    #     使用 try_files 做單頁應用 fallback
+    # -------------------------
     location / {
+        # 注意：不要再有 index index.html; 以免跟下層衝突
         try_files $uri /index.html;
-        proxy_pass http://suzoo_react:3000/;
+
+        proxy_pass         http://suzoo_react:3000/;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   Upgrade $http_upgrade;
+        proxy_set_header   Connection "upgrade";
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
