--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
 services:
-  # (1) PostgreSQL
+  # -------------------
+  # 1) PostgreSQL
+  # -------------------
   suzoo_postgres:
     image: postgres:15-alpine
     environment:
@@ -16,7 +18,9 @@ services:
       interval: 5s
       retries: 5
 
-  # (2) Ganache (Ethereum 私有鏈)
+  # -------------------
+  # 2) Ganache (Ethereum 私有鏈)
+  # -------------------
   suzoo_ganache:
     image: trufflesuite/ganache-cli:latest
     command: ganache-cli --host 0.0.0.0 --port 8545 --accounts 5 --defaultBalanceEther 100
@@ -25,7 +29,9 @@ services:
     networks:
       - suzoo_net
 
-  # (3) IPFS
+  # -------------------
+  # 3) IPFS
+  # -------------------
   suzoo_ipfs:
     image: ipfs/go-ipfs:latest
     volumes:
@@ -37,7 +43,9 @@ services:
     networks:
       - suzoo_net
 
-  # (4) FastAPI
+  # -------------------
+  # 4) FastAPI
+  # -------------------
   suzoo_fastapi:
     build:
       context: ./fastapi
@@ -57,7 +65,9 @@ services:
       timeout: 5s
       retries: 3
 
-  # (5) Express
+  # -------------------
+  # 5) Express
+  # -------------------
   suzoo_express:
     build:
       context: ./express
@@ -79,7 +89,9 @@ services:
       timeout: 5s
       retries: 5
 
-  # (6) Crawler
+  # -------------------
+  # 6) Crawler
+  # -------------------
   suzoo_crawler:
     build:
       context: ./crawler
@@ -94,7 +106,9 @@ services:
     networks:
       - suzoo_net
 
-  # (7) React 前端
+  # -------------------
+  # 7) React 前端
+  # -------------------
   suzoo_react:
     build:
       context: ./frontend
@@ -106,6 +120,7 @@ services:
       - .env
     expose:
       - "3000"
+    # 額外開放 3000 port，方便你用 http://伺服器ip:3000 測試
     ports:
       - "3000:3000"
     networks:
@@ -116,7 +131,9 @@ services:
       timeout: 10s
       retries: 3
 
-  # (8) Nginx (對外入口)
+  # -------------------
+  # 8) Nginx (唯一對外入口)
+  # -------------------
   suzoo_nginx:
     build:
       context: ./nginx
@@ -128,14 +145,17 @@ services:
     ports:
       - "80:80"
       - "443:443"
-    # 不再掛載 default.conf (避免 read-only)
-    # 僅掛載 SSL cert
     volumes:
+      # 這裡掛載你的 default.conf (就是新的)
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
     restart: unless-stopped
     networks:
       - suzoo_net
 
+# -------------------
+# Network & Volumes
+# -------------------
 networks:
   suzoo_net:
     driver: bridge
