--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,16 +1,14 @@
-# 例如檔案路徑: nginx/Dockerfile
-FROM nginx:alpine
+FROM nginx:1.27.4-alpine
 
-# 1) 刪除官方預設的 default.conf (或全部 .conf 皆可)
+# 1) 刪除官方預設的 default.conf，以免衝突
 RUN rm -f /etc/nginx/conf.d/default.conf
 
-# 2) 複製我們自己的 default.conf
-COPY default.conf /etc/nginx/conf.d/default.conf
+# 2) 這裡**不**再 COPY default.conf，因為我們會用 docker-compose volumes 方式掛載
+# COPY default.conf /etc/nginx/conf.d/default.conf
 
-# 3) (可選) 如果有需要 ssl_dhparam，可放這裡
-# COPY dhparam.pem /etc/nginx/dhparam.pem
+# 可選: 若你有 dhparam.pem 或其他 ssl 憑證檔，可 COPY
 
-# 4) Expose 非必填，容器會用 80 / 443
 EXPOSE 80 443
 
-# Nginx 預設 CMD 即可
+# 預設 CMD
+# (nginx 官方 image 預設就是 `nginx -g daemon off;`)
