--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       - suzoo_net
 
   # -------------------
-  # 4) FastAPI
+  # 4) FastAPI (Python)
   # -------------------
   suzoo_fastapi:
     build:
@@ -90,7 +90,7 @@ services:
       retries: 5
 
   # -------------------
-  # 6) Crawler
+  # 6) Crawler (可選)
   # -------------------
   suzoo_crawler:
     build:
@@ -107,7 +107,7 @@ services:
       - suzoo_net
 
   # -------------------
-  # 7) React 前端
+  # 7) React 前端 (SPA)
   # -------------------
   suzoo_react:
     build:
@@ -120,7 +120,7 @@ services:
       - .env
     expose:
       - "3000"
-    # 額外開放 3000 port，方便你用 http://伺服器ip:3000 測試
+    # 額外開放 3000 port，方便你測試 http://伺服器IP:3000
     ports:
       - "3000:3000"
     networks:
@@ -146,9 +146,8 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      # 這裡掛載你的 default.conf (就是新的)
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - /etc/letsencrypt:/etc/letsencrypt:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro  # SSL 憑證
     restart: unless-stopped
     networks:
       - suzoo_net
