--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -52,12 +52,11 @@ server {
 
     # -------------------------
     # (C) React SPA: 其餘所有路徑 => suzoo_react:3000
-    #     使用 try_files 做單頁應用 fallback
+    # + Fallback: try_files $uri /index.html
     # -------------------------
     location / {
-        # 注意：不要再有 index index.html; 以免跟下層衝突
+        # 不要再有 index index.html; 避免 loop
         try_files $uri /index.html;
-
         proxy_pass         http://suzoo_react:3000/;
         proxy_http_version 1.1;
         proxy_set_header   Upgrade $http_upgrade;
