--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
-  # -------------------
+  ######################
   # 1) PostgreSQL
-  # -------------------
+  ######################
   suzoo_postgres:
     image: postgres:15-alpine
     environment:
@@ -18,9 +18,9 @@ services:
       interval: 5s
       retries: 5
 
-  # -------------------
-  # 2) Ganache (Ethereum 私有鏈)
-  # -------------------
+  ######################
+  # 2) Ganache (ETH)
+  ######################
   suzoo_ganache:
     image: trufflesuite/ganache-cli:latest
     command: ganache-cli --host 0.0.0.0 --port 8545 --accounts 5 --defaultBalanceEther 100
@@ -29,9 +29,9 @@ services:
     networks:
       - suzoo_net
 
-  # -------------------
+  ######################
   # 3) IPFS
-  # -------------------
+  ######################
   suzoo_ipfs:
     image: ipfs/go-ipfs:latest
     volumes:
@@ -43,9 +43,9 @@ services:
     networks:
       - suzoo_net
 
-  # -------------------
-  # 4) FastAPI (Python)
-  # -------------------
+  ######################
+  # 4) FastAPI
+  ######################
   suzoo_fastapi:
     build:
       context: ./fastapi
@@ -65,9 +65,9 @@ services:
       timeout: 5s
       retries: 3
 
-  # -------------------
+  ######################
   # 5) Express
-  # -------------------
+  ######################
   suzoo_express:
     build:
       context: ./express
@@ -89,9 +89,9 @@ services:
       timeout: 5s
       retries: 5
 
-  # -------------------
+  ######################
   # 6) Crawler (可選)
-  # -------------------
+  ######################
   suzoo_crawler:
     build:
       context: ./crawler
@@ -106,9 +106,9 @@ services:
     networks:
       - suzoo_net
 
-  # -------------------
-  # 7) React 前端 (SPA)
-  # -------------------
+  ######################
+  # 7) React 前端
+  ######################
   suzoo_react:
     build:
       context: ./frontend
@@ -120,9 +120,8 @@ services:
       - .env
     expose:
       - "3000"
-    # 額外開放 3000 port，方便你測試 http://伺服器IP:3000
     ports:
-      - "3000:3000"
+      - "3000:3000"  # 方便測試
     networks:
       - suzoo_net
     healthcheck:
@@ -131,9 +130,9 @@ services:
       timeout: 10s
       retries: 3
 
-  # -------------------
-  # 8) Nginx (唯一對外入口)
-  # -------------------
+  ######################
+  # 8) Nginx (對外)
+  ######################
   suzoo_nginx:
     build:
       context: ./nginx
@@ -145,16 +144,14 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    # 用 suzoo.conf 取代 default.conf
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/suzoo.conf:/etc/nginx/conf.d/suzoo.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro  # SSL 憑證
     restart: unless-stopped
     networks:
       - suzoo_net
 
-# -------------------
-# Network & Volumes
-# -------------------
 networks:
   suzoo_net:
     driver: bridge
