--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,12 +1,9 @@
 FROM nginx:1.27.4-alpine
 
-# 1) 刪除官方預設 default.conf，避免多餘設定衝突
+# 刪除官方預設的 default.conf，免得和我們自訂檔案打架
 RUN rm -f /etc/nginx/conf.d/default.conf
 
-# 2) 不在這裡 COPY default.conf，因為我們用 docker-compose volumes :ro 去掛載
-# COPY default.conf /etc/nginx/conf.d/default.conf
-
-# (可選) EXPOSE 80 443
+# 不在這裡 COPY conf；我們用 docker-compose volumes 挂載 suzoo.conf
 EXPOSE 80 443
 
-# 預設 CMD 就是 "nginx -g daemon off;"
+CMD ["nginx", "-g", "daemon off;"]
