--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,32 +1,30 @@
-# ===============================
+# =============================
 # 1) HTTP => HTTPS 重導
-# ===============================
+# =============================
 server {
     listen 80;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
     return 301 https://$host$request_uri;
 }
 
-# ===============================
+# =============================
 # 2) HTTPS 區塊 (實際服務)
-# ===============================
+# =============================
 server {
     listen 443 ssl;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # Docker 內建 DNS
+    # Docker DNS
     resolver 127.0.0.11 valid=30s;
 
-    # SSL 憑證
+    # SSL 憑證 (Let's Encrypt)
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
     ssl_protocols       TLSv1.2 TLSv1.3;
     ssl_ciphers         HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # -------------------------
-    # (A) Express: /api/... => suzoo_express:3000
-    # -------------------------
+    # (A) Express: /api/ => suzoo_express:3000
     location /api/ {
         proxy_pass         http://suzoo_express:3000/;
         proxy_http_version 1.1;
@@ -37,9 +35,7 @@ server {
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # -------------------------
-    # (B) FastAPI: /api/py/... => suzoo_fastapi:8000
-    # -------------------------
+    # (B) FastAPI: /api/py/ => suzoo_fastapi:8000
     location /api/py/ {
         proxy_pass         http://suzoo_fastapi:8000/;
         proxy_http_version 1.1;
@@ -50,12 +46,8 @@ server {
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # -------------------------
-    # (C) React SPA: 其餘所有路徑 => suzoo_react:3000
-    # + Fallback: try_files $uri /index.html
-    # -------------------------
+    # (C) React SPA: 其餘 => suzoo_react:3000 + try_files
     location / {
-        # 不要再有 index index.html; 避免 loop
         try_files $uri /index.html;
         proxy_pass         http://suzoo_react:3000/;
         proxy_http_version 1.1;
