--- a/.env
+++ b/.env
@@ -4,8 +4,7 @@
 POSTGRES_USER=suzoo
 POSTGRES_PASSWORD=KaiShieldDbPass2023!
 POSTGRES_DB=suzoo
-# ★ 與 docker-compose 中 "suzoo_postgres" 保持一致
-POSTGRES_HOST=suzoo_postgres 
+POSTGRES_HOST=suzoo_postgres
 POSTGRES_PORT=5432
 
 # =====================================
@@ -28,7 +27,6 @@ RAPIDAPI_KEY=71dbbf39f7msh794002260b4e71bp1025e2jsn652998e0f81a
 # =====================================
 # Ganache (Ethereum 私有鏈)
 # =====================================
-# Compose 服務名稱: suzoo_ganache
 GANACHE_HOST=suzoo_ganache
 GANACHE_PORT=8545
 BLOCKCHAIN_RPC_URL=http://suzoo_ganache:8545
@@ -36,7 +34,6 @@ BLOCKCHAIN_RPC_URL=http://suzoo_ganache:8545
 # =====================================
 # IPFS 服務 URL
 # =====================================
-# Compose 服務名稱: suzoo_ipfs
 IPFS_API_URL=http://suzoo_ipfs:5001
 
 # =====================================
@@ -52,13 +49,11 @@ NODE_ENV=production
 # =====================================
 # FastAPI 服務 URL
 # =====================================
-# Compose 服務名稱: suzoo_fastapi
 FASTAPI_URL=http://suzoo_fastapi:8000
 
 # =====================================
 # Express 服務認證 (供爬蟲或其他服務登入使用)
 # =====================================
-# Compose 服務名稱: suzoo_express
 EXPRESS_LOGIN_USER=your_express_username
 EXPRESS_LOGIN_PASS=your_express_password
 EXPRESS_BASE_URL=http://suzoo_express:3000
@@ -74,6 +69,6 @@ BLOCKCHAIN_PRIVATE_KEY=0x0123456789abcdef0123456789abcdef0123456789abcdef0123456
 CONTRACT_ADDRESS=0x590CC0a45103883cEa6E27c9a4Cc356De6384aeb
 
 # =====================================
-# (可選) 完整資料庫連線字串
+# 完整資料庫連線字串
 # =====================================
 DATABASE_URL=postgresql://suzoo:KaiShieldDbPass2023!@suzoo_postgres:5432/suzoo
