--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,43 +1,87 @@
-# ================================
-# suzoo.conf (HTTP版)
-# 如需 HTTPS + 301 轉向，請再自行新增 server block
-# ================================
+# HTTP 80 -> HTTPS 443 重導
 server {
-    listen 80;
-    server_name localhost;  # 或 suzookaizokuhunter.com
+    listen       80;
+    listen       [::]:80;
+    server_name  suzookaizokuhunter.com www.suzookaizokuhunter.com;
+    return 301   https://$host$request_uri;
+}
 
-    # 反向代理到 React
+# HTTPS 主服務配置
+server {
+    listen                   443 ssl http2;
+    listen                   [::]:443 ssl http2;
+    server_name              suzookaizokuhunter.com www.suzookaizokuhunter.com;
+
+    # SSL 憑證與金鑰 (Let's Encrypt)
+    ssl_certificate          /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
+    ssl_certificate_key      /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
+    ssl_session_cache        shared:SSL:10m;
+    ssl_session_timeout      10m;
+    ssl_protocols            TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+
+    # React 前端 (SPA) - 根路徑 
     location / {
+        try_files $uri /index.html =404;
         proxy_pass http://suzoo_react:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        try_files $uri /index.html;
+        proxy_set_header Host               $host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto  $scheme;
     }
 
-    # Express API
+    # Express 後端 (Node) - 多個路徑代理到 suzoo_express
     location /auth/ {
-        proxy_pass http://suzoo_express:3000/auth/;
+        proxy_pass http://suzoo_express:3000;
+        proxy_set_header Host               $host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto  $scheme;
     }
     location /membership/ {
-        proxy_pass http://suzoo_express:3000/membership/;
+        proxy_pass http://suzoo_express:3000;
+        proxy_set_header Host               $host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto  $scheme;
     }
     location /upload/ {
-        proxy_pass http://suzoo_express:3000/upload/;
+        proxy_pass http://suzoo_express:3000;
+        proxy_set_header Host               $host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto  $scheme;
     }
     location /infringement/ {
-        proxy_pass http://suzoo_express:3000/infringement/;
+        proxy_pass http://suzoo_express:3000;
+        proxy_set_header Host               $host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto  $scheme;
     }
     location /profiles/ {
-        proxy_pass http://suzoo_express:3000/profiles/;
+        proxy_pass http://suzoo_express:3000;
+        proxy_set_header Host               $host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto  $scheme;
     }
     location /api/ {
-        proxy_pass http://suzoo_express:3000/api/;
+        # 注意：/api/py/ 由下方更特定的路由處理，此處給 Express 其他 API 使用
+        proxy_pass http://suzoo_express:3000;
+        proxy_set_header Host               $host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto  $scheme;
     }
 
-    # Health
-    location /health {
-        proxy_pass http://suzoo_express:3000/health;
+    # FastAPI 後端 (Python) - /api/py/ 路徑代理到 suzoo_fastapi
+    location /api/py/ {
+        # 將 /api/py 請求轉發至 Python API 服務
+        proxy_pass http://suzoo_fastapi:8000/;
+        proxy_set_header Host               $host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto  $scheme;
     }
 }
