--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,142 +1,130 @@
 services:
-  ######################
-  # 1) PostgreSQL
-  ######################
+  ###################################
+  # 1) PostgreSQL (可選)
+  ###################################
   suzoo_postgres:
     image: postgres:15-alpine
+    container_name: suzoo_postgres
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
     volumes:
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
       - suzoo_db_data:/var/lib/postgresql/data
     networks:
       - suzoo_net
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
-      interval: 5s
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 10s
+      timeout: 5s
       retries: 5
 
-  ######################
-  # 2) Ganache (ETH)
-  ######################
+  ###################################
+  # 2) Ganache (ETH 私有鏈)
+  ###################################
   suzoo_ganache:
     image: trufflesuite/ganache-cli:latest
+    container_name: suzoo_ganache
     command: ganache-cli --host 0.0.0.0 --port 8545 --accounts 5 --defaultBalanceEther 100
     ports:
       - "8545:8545"
     networks:
       - suzoo_net
 
-  ######################
-  # 3) IPFS
-  ######################
+  ###################################
+  # 3) IPFS (可選)
+  ###################################
   suzoo_ipfs:
     image: ipfs/go-ipfs:latest
-    volumes:
-      - suzoo_ipfs_data:/data/ipfs
+    container_name: suzoo_ipfs
     command: daemon
     ports:
       - "5001:5001"
       - "8080:8080"
+    volumes:
+      - suzoo_ipfs_data:/data/ipfs
     networks:
       - suzoo_net
 
-  ######################
-  # 4) FastAPI (可自行保留/刪除)
-  ######################
+  ###################################
+  # 4) FastAPI (若需要Python後端)
+  ###################################
   suzoo_fastapi:
     build:
       context: ./fastapi
       dockerfile: Dockerfile
+    container_name: suzoo_fastapi
+    env_file:
+      - .env
     depends_on:
       - suzoo_ganache
       - suzoo_ipfs
-    env_file:
-      - .env
     expose:
       - "8000"
     networks:
       - suzoo_net
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8000/health"]
+      test: ["CMD-SHELL", "curl -f http://localhost:8000/health || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 3
 
-  ######################
-  # 5) Express
-  ######################
+  ###################################
+  # 5) Express (Node.js 後端)
+  ###################################
   suzoo_express:
     build:
       context: ./express
       dockerfile: Dockerfile
+    container_name: suzoo_express
+    env_file:
+      - .env
     depends_on:
       - suzoo_postgres
       - suzoo_ganache
       - suzoo_ipfs
-      - suzoo_fastapi
-    env_file:
-      - .env
     expose:
-      - "3000"
+      - "${EXPRESS_PORT}"
     networks:
       - suzoo_net
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:3000/health"]
+      test: ["CMD-SHELL", "curl -f http://localhost:${EXPRESS_PORT}/health || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
 
-  ######################
-  # 6) Crawler (可選)
-  ######################
-  suzoo_crawler:
-    build:
-      context: ./crawler
-      dockerfile: Dockerfile
-    depends_on:
-      - suzoo_express
-      - suzoo_postgres
-    env_file:
-      - .env
-    expose:
-      - "8081"
-    networks:
-      - suzoo_net
-
-  ######################
-  # 7) React
-  ######################
+  ###################################
+  # 6) React 前端
+  ###################################
   suzoo_react:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-    depends_on:
-      - suzoo_express
-      - suzoo_fastapi
+    container_name: suzoo_react
     env_file:
       - .env
+    depends_on:
+      - suzoo_express
     expose:
       - "3000"
-    ports:
-      - "3000:3000"
     networks:
       - suzoo_net
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:3000"]
+      test: ["CMD-SHELL", "curl -f http://localhost:3000 || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
 
-  ######################
-  # 8) Nginx
-  ######################
+  ###################################
+  # 7) Nginx (對外, 80 & 443)
+  ###################################
   suzoo_nginx:
     build:
       context: ./nginx
       dockerfile: Dockerfile
+    container_name: suzoo_nginx
+    env_file:
+      - .env
     depends_on:
       - suzoo_react
       - suzoo_express
@@ -146,10 +134,11 @@ services:
       - "443:443"
     volumes:
       - ./nginx/suzoo.conf:/etc/nginx/conf.d/suzoo.conf:ro
+      # SSL 憑證 (Let's Encrypt) 掛載
       - /etc/letsencrypt:/etc/letsencrypt:ro
-    restart: unless-stopped
     networks:
       - suzoo_net
+    restart: unless-stopped
 
 networks:
   suzoo_net:
