--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,20 +1,21 @@
 ########################################################
-# 1) HTTP 80 -> HTTPS 重導
+# 1) HTTP => 301 => HTTPS
 ########################################################
 server {
     listen 80;
+    listen [::]:80;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
     return 301 https://$host$request_uri;
 }
 
 ########################################################
-# 2) HTTPS 主服務 (443)
+# 2) HTTPS 服務 (443)
 ########################################################
 server {
     listen 443 ssl;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # SSL 憑證 (掛載自 /etc/letsencrypt/)
+    # SSL 憑證 & 私鑰
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
     ssl_session_timeout 5m;
@@ -25,8 +26,9 @@ server {
     # Docker DNS
     resolver 127.0.0.11 valid=30s;
 
-    # React 前端 (SPA)，直接proxy到 suzoo_react:3000
-    # 或者您要把 React build 復製到 /usr/share/nginx/html，再 try_files ...
+    ####################################################
+    # React (SPA) => suzoo_react:3000
+    ####################################################
     location / {
         proxy_pass http://suzoo_react:3000;
         proxy_http_version 1.1;
@@ -34,13 +36,12 @@ server {
         proxy_set_header X-Real-IP          $remote_addr;
         proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto  $scheme;
-        # SPA: 避免 404 => 可改 try_files $uri /index.html if you serve static
+        # 如果直接用 Nginx serve 靜態檔: root /usr/share/nginx/html; try_files $uri /index.html;
     }
 
     ####################################################
-    # Express (Node) API 轉發
+    # Express API => suzoo_express:${EXPRESS_PORT}
     ####################################################
-    # /auth, /membership, /upload, /infringement, /api, etc.
     location /auth/ {
         proxy_pass http://suzoo_express:${EXPRESS_PORT};
         proxy_http_version 1.1;
@@ -58,7 +59,7 @@ server {
         proxy_set_header X-Forwarded-Proto  $scheme;
     }
     location /upload/ {
-        client_max_body_size 100m; # 允許上傳檔案大小
+        client_max_body_size 100m;
         proxy_pass http://suzoo_express:${EXPRESS_PORT};
         proxy_http_version 1.1;
         proxy_set_header Host               $host;
@@ -76,7 +77,7 @@ server {
     }
 
     ####################################################
-    # FastAPI (若需要Python後端), 路徑 /api/py/
+    # FastAPI => suzoo_fastapi:8000 (路徑 /api/py/)
     ####################################################
     location /api/py/ {
         proxy_pass http://suzoo_fastapi:8000/;
