--- a/express/Dockerfile
+++ b/express/Dockerfile
@@ -2,7 +2,6 @@ FROM node:18-slim
 
 WORKDIR /app
 
-# 安裝依賴
 COPY package.json ./
 RUN npm install
 
@@ -10,4 +9,4 @@ COPY . .
 
 EXPOSE ${EXPRESS_PORT}
 
-CMD ["node", "server.js"]
+CMD ["npm","start"]
