--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,14 +2,15 @@ FROM node:18-slim
 
 WORKDIR /app
 
-RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
-
 COPY package.json ./
 RUN npm install
 
 COPY . .
 
+# build 靜態檔
 RUN npm run build
+
+# 安裝serve (若不需要可移除)
 RUN npm install -g serve
 
 EXPOSE 3000
